7.RAD/zc702_workspace/mnist_mlp_bgn/mnist_mlp_bgn/logs/hls_run_csim_21044.backup.log
  **** HLS Build v2025.2 6295257
INFO: [HLS 200-2005] Using work_dir E:/source/.ITA/FPGA/7.RAD/zc702_workspace/mnist_mlp_bgn/mnist_mlp_bgn 
INFO: [HLS 200-2176] Writing Vitis IDE component file E:/source/.ITA/FPGA/7.RAD/zc702_workspace/mnist_mlp_bgn/mnist_mlp_bgn/vitis-comp.json
INFO: [HLS 200-10] Creating and opening component 'E:/source/.ITA/FPGA/7.RAD/zc702_workspace/mnist_mlp_bgn/mnist_mlp_bgn'.
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.amd.com/access/sources/dita/topic?Doc_Version=2025.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-2174] Applying component config ini file hls_config.cfg
INFO: [HLS 200-1465] Applying config ini 'syn.file=bgn_inference.cpp' from hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file 'E:/source/.ITA/FPGA/7.RAD/zc702_workspace/mnist_mlp_bgn/bgn_inference.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'tb.file=test_bench.cpp' from hls_config.cfg(8)
INFO: [HLS 200-10] Adding test bench file 'E:/source/.ITA/FPGA/7.RAD/zc702_workspace/mnist_mlp_bgn/test_bench.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.top=bgn_inference' from hls_config.cfg(7)
INFO: [HLS 200-1465] Applying config ini 'flow_target=vivado' from hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.amd.com/access/sources/dita/topic?Doc_Version=2025.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying config ini 'part=xc7z020clg400-2' from hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7z020-clg400-2'
INFO: [HLS 200-1465] Applying config ini 'package.output.format=ip_catalog' from hls_config.cfg(5)
INFO: [HLS 200-2176] Writing Vitis IDE component file E:/source/.ITA/FPGA/7.RAD/zc702_workspace/mnist_mlp_bgn/mnist_mlp_bgn/vitis-comp.json
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [HLS 200-2191] C-Simulation will use clang-16 as the compiler
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../bgn_inference.cpp in debug mode
../../../../bgn_inference.cpp:1:1: error: unknown type name 'weight_mem_clk'
weight_mem_clk
^
../../../../bgn_inference.cpp:1:15: error: expected unqualified-id
weight_mem_clk
              ^
2 errors generated.
mingw32-make: *** [csim.mk:97: obj/bgn_inference.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: CSIM Failed
INFO: [HLS 200-112] Total CPU user time: 1 seconds. Total CPU system time: 1 seconds. Total elapsed time: 1.252 seconds; peak allocated memory: 135.199 MB.
